--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     
     <h1>Javascript Material rewiev Examples</h1>
     <h2>Subtitle</h2>
+    <h3>Nimber of likes: <span>13</span></h3>
+    <button>Like</button>
     <p>paragraph</p>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
