--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <h2>Subtitle</h2>
     <h3>Nimber of likes: <span>13</span></h3>
     <button>Like</button>
+    <button id='add'>Add</button>
+    <button id='remove'>remove</button>
+    <main>
     <p>paragraph</p>
-
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="scripts.js"></script>
