--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <h1>Javascript Material rewiev Examples</h1>
+    <div id="box-container"></div>
     <h2>Subtitle</h2>
     <h3>Nimber of likes: <span>13</span></h3>
     <button>Like</button>
@@ -22,3 +23,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
